--- a/MSS.WLIM.LostItemRequest.API/MSS - Backup.WLIM.LostItemRequest.API.csproj
+++ b/MSS.WLIM.LostItemRequest.API/MSS - Backup.WLIM.LostItemRequest.API.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MSS.WLIM.DataServices\MSS.WLIM.DataServices.csproj" />
+    <ProjectReference Include="..\WLIMApi\MSS.WLIM.DataServices\MSS.WLIM.DataServices.csproj" />
   </ItemGroup>
 
 </Project>
